--- a/src/vistas/ImportacionArchivos.fxml
+++ b/src/vistas/ImportacionArchivos.fxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1012.0" stylesheets="@../utilerias/general/Estilo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vistas.ImportacionArchivosController">
    <children>
@@ -15,5 +19,33 @@
             <Button fx:id="botonCerrar" mnemonicParsing="false" styleClass="title-button" text="x" />
          </children>
       </HBox>
+      <Label alignment="CENTER" layoutX="205.0" layoutY="61.0" prefHeight="70.0" prefWidth="602.0" styleClass="title" text="Importa aqui los archivos" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="53.0" layoutY="138.0" styleClass="title-subtitulo" text="Si deseas adjuntar un nuevo documento, selecciona la opción-presiona el botón adjuntar documento-presiona el botón guardar" />
+      <Pane layoutX="80.0" layoutY="178.0" prefHeight="294.0" prefWidth="850.0" styleClass="card-info">
+         <children>
+            <Label layoutX="61.0" layoutY="14.0" text="Tipo de Documento" />
+            <Label layoutX="521.0" layoutY="14.0" text="Documento">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="61.0" layoutY="62.0" text="Programa Institucional:" />
+            <Label layoutX="60.0" layoutY="135.0" text="Elije un listado a importar: " />
+            <ComboBox fx:id="comboBoxListados" layoutX="244.0" layoutY="126.0" prefHeight="38.0" prefWidth="238.0" />
+            <Label layoutX="61.0" layoutY="203.0" text="Elije un formato a importar:" />
+            <ComboBox fx:id="comboBoxFormatos" layoutX="244.0" layoutY="194.0" prefHeight="38.0" prefWidth="238.0" />
+            <Button fx:id="botonPC" layoutX="519.0" layoutY="53.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="150.0" styleClass="button-blanco" text="Adjuntar Documento" />
+            <Button fx:id="botonListado" layoutX="519.0" layoutY="126.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="150.0" styleClass="button-blanco" text="Adjuntar Documento" />
+            <Button fx:id="botonFormato" layoutX="519.0" layoutY="194.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="150.0" styleClass="button-blanco" text="Adjuntar Documento" />
+            <Label fx:id="labelPC" layoutX="676.0" layoutY="63.0" />
+            <Label fx:id="labelListado" layoutX="676.0" layoutY="137.0" />
+            <Label fx:id="labelFormato" layoutX="676.0" layoutY="203.0" />
+         </children>
+      </Pane>
+      <Button fx:id="botonGuardar" layoutX="779.0" layoutY="499.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="150.0" styleClass="button-azul" text="Guardar" />
    </children>
 </AnchorPane>
