--- a/src/vistas/ModificacionDatos.fxml
+++ b/src/vistas/ModificacionDatos.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1012.0" stylesheets="@../utilerias/general/Estilo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vistas.ModificacionDatosController">
+<AnchorPane id="AnchorPane" fx:id="boton_cancelar" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1012.0" stylesheets="@../utilerias/general/Estilo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vistas.ModificacionDatosController">
    <children>
       <HBox prefHeight="6.0" prefWidth="1012.0" styleClass="hbox">
          <children>
@@ -15,5 +21,40 @@
             <Button fx:id="botonCerrar" mnemonicParsing="false" styleClass="title-button" text="x" />
          </children>
       </HBox>
+      <Button fx:id="botonGuardar" layoutX="217.0" layoutY="486.0" mnemonicParsing="false" styleClass="button-azul" text="Guardar" />
+      <Button fx:id="botonLimpiar" layoutX="90.0" layoutY="486.0" mnemonicParsing="false" styleClass="button-gris" text="Limpiar" />
+      <Label layoutX="90.0" layoutY="280.0" text="Director:" />
+      <Label layoutX="561.0" layoutY="280.0" text="Coordinador:" />
+      <Label layoutX="90.0" layoutY="378.0" text="Jefe del Departamento de Desarrollo Academico:" />
+      <Label layoutX="557.0" layoutY="378.0" text="Total de Docentes Adscritos:" />
+      <TextField fx:id="directorField" layoutX="90.0" layoutY="306.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="32.0" prefWidth="359.0" promptText="Nombre del director(a)" />
+      <TextField fx:id="coordinadorField" layoutX="557.0" layoutY="306.0" prefHeight="32.0" prefWidth="302.0" promptText="Nombre del Coordinador(a)" />
+      <TextField fx:id="jefeDeptoField" layoutX="90.0" layoutY="400.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="32.0" prefWidth="359.0" promptText="Nombre del Jefe de Departamento de Desarrollo Academico" />
+      <Label alignment="CENTER" layoutX="-1.0" layoutY="139.0" prefHeight="102.0" prefWidth="1012.0" style="-fx-font-size: 40;" styleClass="title" text="Modificación de datos" textFill="#0735b1" AnchorPane.topAnchor="120.0" />
+      <ImageView fitHeight="102.0" fitWidth="101.0" layoutX="790.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="125.0">
+         <image>
+            <Image url="@../utilerias/modificacion/logoITZ.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="57.0" fitWidth="176.0" layoutX="129.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="125.0">
+         <image>
+            <Image url="@../utilerias/modificacion/logoGobierno.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="349.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../utilerias/modificacion/logoEducacion.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="563.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../utilerias/modificacion/logoTECNM.png" />
+         </image>
+      </ImageView>
+      <Spinner fx:id="totalDocentesField" layoutX="557.0" layoutY="400.0" prefWidth="90.0" />
+      <Spinner fx:id="año" layoutX="90.0" layoutY="234.0" prefHeight="32.0" prefWidth="90.0" />
+      <ComboBox fx:id="periodoEscolar" layoutX="557.0" layoutY="231.0" prefWidth="150.0" promptText="Periodo escolar" styleClass="combo-box" />
+      <Label layoutX="90.0" layoutY="207.0" text="Año:" />
+      <Label layoutX="561.0" layoutY="207.0" text="Periodo:" />
    </children>
 </AnchorPane>
