--- a/src/vistas/BusquedaEstadistica.fxml
+++ b/src/vistas/BusquedaEstadistica.fxml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -15,5 +20,38 @@
             <Button fx:id="botonCerrar" mnemonicParsing="false" styleClass="title-button" text="x" />
          </children>
       </HBox>
+      <Label layoutX="41.0" layoutY="73.0" text="Tipo de capacitación:" />
+      <Label layoutX="190.0" layoutY="179.0" text="Periodo:" />
+      <Label layoutX="41.0" layoutY="122.0" text="Departamento:" />
+      <Label layoutX="41.0" layoutY="179.0" text="Año:" />
+      <Label layoutX="672.0" layoutY="482.0" text="Formato de archivo:" />
+      <Label layoutX="446.0" layoutY="72.0" text="Acreditación:" />
+      <Label layoutX="446.0" layoutY="122.0" text="Nivel:" />
+      <ComboBox fx:id="comboTipoCapacitacion" layoutX="190.0" layoutY="63.0" prefHeight="38.0" prefWidth="214.0" promptText="Selecciona una opción" />
+      <ComboBox fx:id="comboDepartamento" layoutX="147.0" layoutY="113.0" prefHeight="38.0" prefWidth="257.0" promptText="Selecciona una opción" />
+      <ComboBox fx:id="comboAño" layoutX="77.0" layoutY="170.0" prefHeight="38.0" prefWidth="99.0" promptText="---" />
+      <ComboBox fx:id="comboPeriodo" layoutX="251.0" layoutY="170.0" prefHeight="38.0" prefWidth="152.0" promptText="Selecciona una opción" />
+      <ComboBox fx:id="comboAcreditacion" layoutX="538.0" layoutY="64.0" prefHeight="38.0" prefWidth="182.0" promptText="---" />
+      <ComboBox fx:id="comboNivel" layoutX="486.0" layoutY="113.0" prefHeight="38.0" prefWidth="234.0" promptText="---" />
+      <Button fx:id="botonBuscar" layoutX="832.0" layoutY="63.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="81.0" styleClass="button-azul" text="Buscar" />
+      <Button fx:id="botonLimpiar" layoutX="832.0" layoutY="123.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="82.0" styleClass="button-gris" text="Limpar" />
+      <TableView fx:id="tabla" layoutX="43.2" layoutY="235.0" prefHeight="215.0" prefWidth="926.0" AnchorPane.leftAnchor="43.0" AnchorPane.rightAnchor="43.0" />
+      <ComboBox fx:id="comboFormato" layoutX="818.0" layoutY="473.0" prefWidth="150.0" promptText="---" />
+      <Button fx:id="botonExportar" layoutX="871.0" layoutY="527.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="93.0" styleClass="button-azul" text="Export" />
+      <Label layoutX="42.4" layoutY="455.0" text="Numero total de docentes del tecnologico:" AnchorPane.leftAnchor="42.4" />
+      <Label layoutX="41.0" layoutY="472.0" text="Número total de docentes que tomaron curso de capacitación:" AnchorPane.leftAnchor="41.0" />
+      <Label layoutX="41.0" layoutY="492.0" text="(%) de docentes que tomaron cursos de capacitación:" AnchorPane.leftAnchor="41.0" />
+      <Label layoutX="41.0" layoutY="511.0" text="Número de participantes nivel posgrado (AP):" AnchorPane.leftAnchor="41.0" />
+      <Label fx:id="botonActualizar" layoutX="77.0" layoutY="538.0" styleClass="label-vinculo" text="¿SE ACTUALIZARON DOCUMENTOS?" />
+      <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="43.0" layoutY="536.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="42.0">
+         <image>
+            <Image url="@../utilerias/busqueda/logoInterrogacion.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="docentesTomandoCursos" layoutX="434.0" layoutY="472.0" text="000" />
+      <Label fx:id="numeroTotalDocentes" layoutX="315.0" layoutY="455.0" text="000" />
+      <Label fx:id="porcentajeDocentesCapacitados" layoutX="379.0" layoutY="492.0" text="000" />
+      <Label fx:id="NumeroDocentesNivel" layoutX="333.0" layoutY="511.0" text="000" />
+      <Label fx:id="botonActualizarDatos" layoutX="103.0" layoutY="557.0" styleClass="label-vinculo" text="¿SE ACTUALIZARON DATOS?" />
    </children>
 </AnchorPane>
