--- a/src/vistas/ExportacionReconocimientos.fxml
+++ b/src/vistas/ExportacionReconocimientos.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1012.0" stylesheets="@../utilerias/general/Estilo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vistas.ExportacionReconocimientosController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="582.0" prefWidth="1012.0" stylesheets="@../utilerias/general/Estilo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vistas.ExportacionReconocimientosController">
    <children>
       <HBox prefHeight="26.0" prefWidth="1012.0" styleClass="hbox">
          <children>
@@ -15,5 +21,50 @@
             <Button fx:id="botonCerrar" mnemonicParsing="false" styleClass="title-button" text="x" />
          </children>
       </HBox>
+      <Label layoutX="23.0" layoutY="204.0" text="Codigo del curso:" />
+      <Label layoutX="20.0" layoutY="281.0" text="Nombre del curso:" />
+      <Label layoutX="590.0" layoutY="204.0" text="Horas:" />
+      <Label layoutX="489.0" layoutY="281.0" text="Nombre del instructor:" />
+      <Label layoutX="453.0" layoutY="354.0" prefWidth="177.0" text="Competencias desarrolladas:" />
+      <Label layoutX="509.0" layoutY="460.0" text="Formato de archivo:" />
+      <Button fx:id="botonBuscar" layoutX="371.0" layoutY="195.0" mnemonicParsing="false" onAction="#buscarCurso" styleClass="button-azul" text="Buscar" textFill="WHITE" />
+      <Button fx:id="botonGuardar" layoutX="509.0" layoutY="502.0" mnemonicParsing="false" onAction="#guardarDatos" styleClass="button-azul" text="Guardar" textFill="WHITE" />
+      <Button layoutX="886.0" layoutY="502.0" mnemonicParsing="false" onAction="#exportarReconocimientos" styleClass="button-azul" text="Exportar" textFill="#fffdfd" />
+      <ImageView fitHeight="86.0" fitWidth="200.0" layoutX="602.0" layoutY="45.0">
+         <image>
+            <Image url="@../utilerias/reconocimientos/logoTECNM.png" />
+         </image>
+      </ImageView>
+      <ImageView layoutX="827.0" layoutY="43.0">
+         <image>
+            <Image url="@../utilerias/reconocimientos/logoITZ.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="57.0" fitWidth="200.0" layoutX="136.0" layoutY="52.0">
+         <image>
+            <Image url="@../utilerias/reconocimientos/logoGobierno.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="71.0" fitWidth="200.0" layoutX="371.0" layoutY="45.0">
+         <image>
+            <Image url="@../utilerias/reconocimientos/logoEducacion.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="txtcodigodelcurso" layoutX="158.0" layoutY="193.0" prefHeight="42.0" prefWidth="200.0" styleClass="text-field" />
+      <TextField fx:id="txtNombreInstructor" layoutX="643.0" layoutY="266.0" prefHeight="50.0" prefWidth="243.0" />
+      <Label layoutX="20.0" layoutY="354.0" text="Fecha del curso:" />
+      <TextField fx:id="txtFechaCurso" layoutX="158.0" layoutY="343.0" prefHeight="42.0" prefWidth="278.0" />
+      <ComboBox fx:id="txtHoras" layoutX="643.0" layoutY="193.0" prefHeight="42.0" prefWidth="99.0" />
+      <ComboBox fx:id="txtFormatos" layoutX="643.0" layoutY="450.0" prefWidth="150.0" />
+      <Button fx:id="botonModificar" layoutX="26.0" layoutY="502.0" mnemonicParsing="false" onAction="#modificarDatos" styleClass="button-azul" text="Modificar" textFill="WHITE" />
+      <Button fx:id="botonLimpiar" layoutX="358.0" layoutY="502.0" mnemonicParsing="false" onAction="#limpiarCampos" styleClass="button-gris" text="Limpiar" />
+      <TextArea fx:id="txtAreaCompetencias" layoutX="643.0" layoutY="342.0" prefHeight="86.0" prefWidth="323.0" wrapText="true" />
+      <TextArea fx:id="txtAreaNombreCurso" layoutX="158.0" layoutY="266.0" prefHeight="50.0" prefWidth="278.0" wrapText="true" />
+      <Label fx:id="buttonRedireccionar" layoutX="710.0" layoutY="157.0" styleClass="label-vinculo" text="¿SE ACTUALIZARON DOCUMENTOS?" />
+      <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="681.0" layoutY="153.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../utilerias/reconocimientos/logoInterrogacion.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
