--- a/src/vistas/Principal.fxml
+++ b/src/vistas/Principal.fxml
@@ -1,18 +1,160 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.effect.Bloom?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1012.0" stylesheets="@../utilerias/general/Estilo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vistas.PrincipalController">
-   <children>
-      <HBox prefHeight="17.0" prefWidth="1012.0" styleClass="hbox">
-         <children>
-            <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
-            <Button fx:id="botonMinimizar" mnemonicParsing="false" styleClass="title-button" text="-" />
-            <Button fx:id="botonCerrar" mnemonicParsing="false" styleClass="title-button" text="x" />
-         </children>
-      </HBox>
-   </children>
+    <children>
+        <HBox prefHeight="17.0" prefWidth="1012.0" styleClass="hbox">
+            <children>
+                <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
+                <Button fx:id="botonMinimizar" mnemonicParsing="false" styleClass="title-button" text="-" />
+                <Button fx:id="botonCerrar" mnemonicParsing="false" styleClass="title-button" text="x" />
+            </children>
+        </HBox>
+        <ImageView fitHeight="36.0" fitWidth="48.0" layoutX="12.0" layoutY="57.0">
+            <image>
+                <Image url="@../utilerias/principal/logoUsuario.png" />
+            </image>
+        </ImageView>
+        <Pane fx:id="botonImportacion" layoutX="14.0" layoutY="290.0" prefHeight="140.0" prefWidth="140.0" styleClass="card">
+            <children>
+                <ImageView fitHeight="68.0" fitWidth="76.0" layoutX="30.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../utilerias/principal/logoImportacion.png" />
+                    </image>
+                </ImageView>
+                <Label alignment="CENTER" layoutX="-1.0" layoutY="90.0" prefHeight="21.0" prefWidth="145.0" styleClass="label-principal" text="Importación de archivos" textAlignment="CENTER" wrapText="true" />
+            </children>
+        </Pane>
+        <Pane fx:id="botonVisualizacion" layoutX="190.0" layoutY="290.0" prefHeight="140.0" prefWidth="140.0" styleClass="card">
+            <children>
+                <ImageView fitHeight="68.0" fitWidth="76.0" layoutX="30.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../utilerias/principal/logoVisualizacion.png" />
+                    </image>
+                </ImageView>
+                <Label layoutX="-1.0" layoutY="90.0" prefHeight="30.0" prefWidth="140.0" styleClass="label-principal" text="Visualización y acreditación docente" textAlignment="CENTER" wrapText="true">
+                    <font>
+                        <Font size="10.0" />
+                    </font>
+                </Label>
+            </children>
+        </Pane>
+        <Pane fx:id="botonBusqueda" layoutX="356.0" layoutY="290.0" prefHeight="140.0" prefWidth="140.0" styleClass="card">
+            <children>
+                <ImageView fitHeight="68.0" fitWidth="76.0" layoutX="30.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../utilerias/principal/logoBusqueda.png" />
+                    </image>
+                </ImageView>
+                <Label alignment="CENTER" layoutX="1.0" layoutY="90.0" prefHeight="15.0" prefWidth="138.0" styleClass="label-principal" text="Busqueda y  estadisticas">
+                    <font>
+                        <Font size="10.0" />
+                    </font>
+                </Label>
+            </children>
+        </Pane>
+        <Pane fx:id="botonModificacion" layoutX="524.0" layoutY="290.0" prefHeight="140.0" prefWidth="140.0" styleClass="card">
+            <children>
+                <ImageView fitHeight="68.0" fitWidth="76.0" layoutX="35.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../utilerias/principal/logoModificacion.png" />
+                    </image>
+                </ImageView>
+                <Label alignment="CENTER" layoutX="1.0" layoutY="90.0" prefHeight="15.0" prefWidth="138.0" styleClass="label-principal" text="Modificación de datos">
+                    <font>
+                        <Font size="10.0" />
+                    </font>
+                </Label>
+            </children>
+        </Pane>
+        <Pane fx:id="botonExportacion" layoutX="686.0" layoutY="290.0" prefHeight="140.0" prefWidth="140.0" styleClass="card">
+            <children>
+                <ImageView fitHeight="68.0" fitWidth="76.0" layoutX="30.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../utilerias/principal/logoExportacion.png" />
+                    </image>
+                </ImageView>
+                <Label alignment="CENTER" layoutX="1.0" layoutY="90.0" prefHeight="32.0" prefWidth="138.0" styleClass="label-principal" text="Exportación de reconocimientos" textAlignment="CENTER" wrapText="true">
+                    <font>
+                        <Font size="10.0" />
+                    </font>
+                </Label>
+            </children>
+        </Pane>
+        <Pane fx:id="botonRespaldo" layoutX="858.0" layoutY="290.0" prefHeight="140.0" prefWidth="140.0" styleClass="card">
+            <children>
+                <ImageView fitHeight="68.0" fitWidth="76.0" layoutX="30.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../utilerias/principal/logoRespaldo.png" />
+                    </image>
+                </ImageView>
+                <Label alignment="CENTER" layoutX="1.0" layoutY="90.0" prefHeight="13.0" prefWidth="138.0" styleClass="label-principal" text="Respaldo">
+                    <font>
+                        <Font size="10.0" />
+                    </font>
+                </Label>
+            </children>
+        </Pane>
+        <Label layoutX="60.0" layoutY="65.0" styleClass="label-principal" text="ADMINISTRADOR" />
+        <ImageView fx:id="notification" fitHeight="37.0" fitWidth="39.0" layoutX="952.0" layoutY="59.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../utilerias/principal/logoCampana.png" />
+            </image>
+            <cursor>
+                <Cursor fx:constant="HAND" />
+            </cursor>
+        </ImageView>
+        <Label alignment="CENTER" layoutX="-7.0" layoutY="79.0" prefHeight="64.0" prefWidth="1026.0" styleClass="title" text="BIENVENID@" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-8.0" layoutY="155.0" prefHeight="20.0" prefWidth="1026.0" text="¿Qué deseas hacer hoy?" />
+      <ImageView fx:id="notiAlert" fitHeight="14.0" fitWidth="15.0" layoutX="975.0" layoutY="58.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../utilerias/principal/notiCirculo.png" />
+         </image>
+      </ImageView>
+        <Pane fx:id="notificationPane" layoutX="691.0" layoutY="57.0" maxWidth="307.0" prefHeight="375.0" prefWidth="307.0" styleClass="notificationPane">
+            <children>
+            <ImageView fx:id="reloadNotis" fitHeight="23.0" fitWidth="21.0" layoutX="10.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../utilerias/principal/reload.png" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
+                <Label fx:id="cerrarNotificacion" layoutX="272.0" layoutY="5.0" prefHeight="21.0" prefWidth="14.0" styleClass="cerrarNotificacion" text="X">
+                    <font>
+                        <Font name="System Bold" size="12.0" />
+                    </font>
+                </Label>
+            <Label alignment="CENTER" contentDisplay="BOTTOM" layoutX="51.0" layoutY="5.0" prefHeight="24.0" prefWidth="198.0" styleClass="titleNotis" text="Notificaciones">
+               <font>
+                  <Font size="10.0" />
+               </font></Label>
+                <ScrollPane fx:id="scrollBox" fitToWidth="true" layoutX="8.0" layoutY="31.0" prefHeight="330.0" prefWidth="284.0" styleClass="scroll-paneNoti" vbarPolicy="ALWAYS">
+                    <content>
+                        <AnchorPane fx:id="ScrollBox" disable="true" prefHeight="293.0" prefWidth="266.0" />
+                    </content>
+                </ScrollPane>
+            </children>
+        </Pane>
+        <VBox fx:id="notificacioneBox" layoutX="208.0" layoutY="-356.0" maxHeight="325.0" prefHeight="350.0" prefWidth="266.0" styleClass="notificationBox">
+         <effect>
+            <Bloom />
+         </effect>
+        </VBox>
+
+    </children>
 </AnchorPane>
