--- a/src/vistas/Respaldo.fxml
+++ b/src/vistas/Respaldo.fxml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1012.0" stylesheets="@../utilerias/general/Estilo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vistas.RespaldoController">
    <children>
@@ -15,5 +20,50 @@
             <Button fx:id="botonCerrar" mnemonicParsing="false" styleClass="title-button" text="x" />
          </children>
       </HBox>
+      <Text fill="#1d3b6f" layoutX="302.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Crear o importar respaldo" textAlignment="CENTER">
+         <font>
+            <Font name="Montserrat Bold" size="32.0" />
+         </font>
+      </Text>
+      <ImageView fitHeight="94.0" fitWidth="85.0" layoutX="898.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../utilerias/respaldo/logoITZ.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="150.0" fitWidth="203.0" layoutX="16.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../utilerias/respaldo/logoTECNM.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="btn_exportar" contentDisplay="TOP" layoutX="560.0" layoutY="231.0" mnemonicParsing="false" onAction="#ir_exportar" prefHeight="140.0" prefWidth="140.0" style="-fx-background-color: white; -fx-border-color: rgba(29,59,111,0.3); -fx-border-width: 1; -fx-border-radius: 10;" styleClass="card" text="Exportar respaldo" textAlignment="CENTER">
+         <graphic>
+            <ImageView fitHeight="58.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../utilerias/respaldo/logoExportacion.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font name="Montserrat Bold" size="10.0" />
+         </font>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </Button>
+      <Button fx:id="btn_importar" contentDisplay="TOP" layoutX="329.0" layoutY="228.0" mnemonicParsing="false" onAction="#ir_importart" prefHeight="140.0" prefWidth="140.0" style="-fx-background-color: white; -fx-border-color: rgba(29,59,111,0.3); -fx-border-width: 1; -fx-border-radius: 10;" styleClass="card" text="Importar respaldo" textAlignment="CENTER">
+         <graphic>
+            <ImageView fx:id="btn_importar" fitHeight="58.0" fitWidth="58.0" onDragDetected="#ir_importart" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../utilerias/respaldo/logoImportacion.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font name="Montserrat Bold" size="10.0" />
+         </font>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </Button>
    </children>
 </AnchorPane>
