--- a/src/vistas/VizualizacionDatos.fxml
+++ b/src/vistas/VizualizacionDatos.fxml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1012.0" stylesheets="@../utilerias/general/Estilo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vistas.VizualizacionDatosController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1012.0" style="-fx-background-color: #00000000;" stylesheets="@../utilerias/general/Estilo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vistas.VizualizacionDatosController">
    <children>
-      <HBox prefHeight="1.0" prefWidth="1012.0" styleClass="hbox">
+      <HBox prefHeight="42.0" prefWidth="1012.0" styleClass="hbox">
          <children>
             <Button fx:id="botonRegresar" mnemonicParsing="false" styleClass="title-button" text="&lt;-" />
             <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
@@ -15,5 +20,40 @@
             <Button fx:id="botonCerrar" mnemonicParsing="false" styleClass="title-button" text="x" />
          </children>
       </HBox>
+      <Button fx:id="botonExportar" layoutX="903.0" layoutY="519.0" mnemonicParsing="false" onAction="#Exportar" prefHeight="38.0" prefWidth="97.0" styleClass="button-azul" text="Exportar" textFill="#ecf2e9" />
+      <ImageView fitHeight="86.0" fitWidth="200.0" layoutX="14.0" layoutY="52.0">
+         <image>
+            <Image url="@../utilerias/visualizacionDatos/logoTecno.png" />
+         </image>
+      </ImageView>
+      <ImageView layoutX="903.0" layoutY="44.0">
+         <image>
+            <Image url="@../utilerias/visualizacionDatos/logoITZ.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="botonActualizar" layoutX="38.0" layoutY="520.0" mnemonicParsing="false" onAction="#actuzalizar" style="-fx-background-color: #00000000;" styleClass="label-vinculo" text="¿SE ACTUALIZARON DOCUMENTOS?" textFill="#4242b4" underline="true">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="botonModificar" layoutX="64.0" layoutY="539.0" mnemonicParsing="false" onAction="#modificar" style="-fx-background-color: #00000000;" styleClass="label-vinculo" text="¿SE ACTUALIZARON DATOS?" textFill="#4242b4" underline="true">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="botonGuardar" layoutX="775.0" layoutY="519.0" mnemonicParsing="false" onAction="#guardar" prefHeight="38.0" prefWidth="98.0" styleClass="button-azul" text="Guardar" />
+      <TextField fx:id="campoBusqueda" layoutX="313.0" layoutY="89.0" prefHeight="32.0" prefWidth="266.0" styleClass="text-field" />
+      <ImageView layoutX="556.0" layoutY="94.0">
+         <image>
+            <Image url="@../utilerias/visualizacionDatos/logoLupa.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="botonBuscar" layoutX="603.0" layoutY="84.0" mnemonicParsing="false" onAction="#Buscar" styleClass="button-azul" text="Buscar" />
+      <TableView fx:id="tableView" layoutX="14.0" layoutY="150.0" prefHeight="356.0" prefWidth="982.0" />
+      <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="14.0" layoutY="521.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../utilerias/visualizacionDatos/logoInterrogacion.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
