--- a/src/vistas/ExportacionReconocimientos.fxml
+++ b/src/vistas/ExportacionReconocimientos.fxml
@@ -21,15 +21,15 @@
             <Button fx:id="botonCerrar" mnemonicParsing="false" styleClass="title-button" text="x" />
          </children>
       </HBox>
-      <Label layoutX="23.0" layoutY="204.0" text="Codigo del curso:" />
-      <Label layoutX="20.0" layoutY="281.0" text="Nombre del curso:" />
+      <Label layoutX="36.0" layoutY="206.0" text="Codigo del curso:" />
+      <Label layoutX="33.0" layoutY="283.0" text="Nombre del curso:" />
       <Label layoutX="590.0" layoutY="204.0" text="Horas:" />
       <Label layoutX="489.0" layoutY="281.0" text="Nombre del instructor:" />
       <Label layoutX="453.0" layoutY="354.0" prefWidth="177.0" text="Competencias desarrolladas:" />
-      <Label layoutX="509.0" layoutY="460.0" text="Formato de archivo:" />
+      <Label layoutX="680.0" layoutY="470.0" text="Formato de archivo:" />
       <Button fx:id="botonBuscar" layoutX="371.0" layoutY="195.0" mnemonicParsing="false" onAction="#buscarCurso" styleClass="button-azul" text="Buscar" textFill="WHITE" />
-      <Button fx:id="botonGuardar" layoutX="509.0" layoutY="502.0" mnemonicParsing="false" onAction="#guardarDatos" styleClass="button-azul" text="Guardar" textFill="WHITE" />
-      <Button layoutX="886.0" layoutY="502.0" mnemonicParsing="false" onAction="#exportarReconocimientos" styleClass="button-azul" text="Exportar" textFill="#fffdfd" />
+      <Button fx:id="botonGuardar" layoutX="509.0" layoutY="512.0" mnemonicParsing="false" onAction="#guardarDatos" styleClass="button-azul" text="Guardar" textFill="WHITE" />
+      <Button layoutX="886.0" layoutY="512.0" mnemonicParsing="false" onAction="#exportarReconocimientos" styleClass="button-azul" text="Exportar" textFill="#fffdfd" />
       <ImageView fitHeight="86.0" fitWidth="200.0" layoutX="602.0" layoutY="45.0">
          <image>
             <Image url="@../utilerias/reconocimientos/logoTECNM.png" />
@@ -51,20 +51,20 @@
          </image>
       </ImageView>
       <TextField fx:id="txtcodigodelcurso" layoutX="158.0" layoutY="193.0" prefHeight="42.0" prefWidth="200.0" styleClass="text-field" />
-      <TextField fx:id="txtNombreInstructor" layoutX="643.0" layoutY="266.0" prefHeight="50.0" prefWidth="243.0" />
-      <Label layoutX="20.0" layoutY="354.0" text="Fecha del curso:" />
-      <TextField fx:id="txtFechaCurso" layoutX="158.0" layoutY="343.0" prefHeight="42.0" prefWidth="278.0" />
+      <TextField fx:id="txtNombreInstructor" layoutX="643.0" layoutY="266.0" prefHeight="50.0" prefWidth="323.0" />
+      <Label layoutX="47.0" layoutY="354.0" text="Fecha del curso:" />
       <ComboBox fx:id="txtHoras" layoutX="643.0" layoutY="193.0" prefHeight="42.0" prefWidth="99.0" />
-      <ComboBox fx:id="txtFormatos" layoutX="643.0" layoutY="450.0" prefWidth="150.0" />
-      <Button fx:id="botonModificar" layoutX="26.0" layoutY="502.0" mnemonicParsing="false" onAction="#modificarDatos" styleClass="button-azul" text="Modificar" textFill="WHITE" />
-      <Button fx:id="botonLimpiar" layoutX="358.0" layoutY="502.0" mnemonicParsing="false" onAction="#limpiarCampos" styleClass="button-gris" text="Limpiar" />
+      <ComboBox fx:id="txtFormatos" layoutX="817.0" layoutY="461.0" prefWidth="150.0" />
+      <Button fx:id="botonModificar" layoutX="33.0" layoutY="512.0" mnemonicParsing="false" onAction="#modificarDatos" styleClass="button-azul" text="Modificar" textFill="WHITE" />
+      <Button fx:id="botonLimpiar" layoutX="358.0" layoutY="512.0" mnemonicParsing="false" onAction="#limpiarCampos" styleClass="button-gris" text="Limpiar" />
       <TextArea fx:id="txtAreaCompetencias" layoutX="643.0" layoutY="342.0" prefHeight="86.0" prefWidth="323.0" wrapText="true" />
-      <TextArea fx:id="txtAreaNombreCurso" layoutX="158.0" layoutY="266.0" prefHeight="50.0" prefWidth="278.0" wrapText="true" />
+      <TextArea fx:id="txtAreaNombreCurso" layoutX="158.0" layoutY="266.0" prefHeight="64.0" prefWidth="278.0" wrapText="true" />
       <Label fx:id="buttonRedireccionar" layoutX="710.0" layoutY="157.0" styleClass="label-vinculo" text="¿SE ACTUALIZARON DOCUMENTOS?" />
       <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="681.0" layoutY="153.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../utilerias/reconocimientos/logoInterrogacion.png" />
          </image>
       </ImageView>
+      <TextArea fx:id="txtFechaCurso" layoutX="158.0" layoutY="354.0" prefHeight="86.0" prefWidth="278.0" wrapText="true" />
    </children>
 </AnchorPane>
