--- a/src/vistas/ModificacionDatos.fxml
+++ b/src/vistas/ModificacionDatos.fxml
@@ -51,7 +51,7 @@
             <Image url="@../utilerias/modificacion/logoTECNM.png" />
          </image>
       </ImageView>
-      <Spinner fx:id="totalDocentesField" layoutX="557.0" layoutY="400.0" prefWidth="90.0" />
+      <Spinner fx:id="totalDocentes" layoutX="557.0" layoutY="400.0" prefWidth="90.0" />
       <Spinner fx:id="año" layoutX="90.0" layoutY="234.0" prefHeight="32.0" prefWidth="90.0" />
       <ComboBox fx:id="periodoEscolar" layoutX="557.0" layoutY="231.0" prefWidth="150.0" promptText="Periodo escolar" styleClass="combo-box" />
       <Label layoutX="90.0" layoutY="207.0" text="Año:" />
