--- a/src/vistas/BusquedaEstadistica.fxml
+++ b/src/vistas/BusquedaEstadistica.fxml
@@ -26,15 +26,13 @@
       <Label layoutX="41.0" layoutY="179.0" text="Año:" />
       <Label layoutX="672.0" layoutY="482.0" text="Formato de archivo:" />
       <Label layoutX="446.0" layoutY="72.0" text="Acreditación:" />
-      <Label layoutX="446.0" layoutY="122.0" text="Nivel:" />
       <ComboBox fx:id="comboTipoCapacitacion" layoutX="190.0" layoutY="63.0" prefHeight="38.0" prefWidth="214.0" promptText="Selecciona una opción" />
       <ComboBox fx:id="comboDepartamento" layoutX="147.0" layoutY="113.0" prefHeight="38.0" prefWidth="257.0" promptText="Selecciona una opción" />
       <ComboBox fx:id="comboAño" layoutX="77.0" layoutY="170.0" prefHeight="38.0" prefWidth="99.0" promptText="---" />
       <ComboBox fx:id="comboPeriodo" layoutX="251.0" layoutY="170.0" prefHeight="38.0" prefWidth="152.0" promptText="Selecciona una opción" />
       <ComboBox fx:id="comboAcreditacion" layoutX="538.0" layoutY="64.0" prefHeight="38.0" prefWidth="182.0" promptText="---" />
-      <ComboBox fx:id="comboNivel" layoutX="486.0" layoutY="113.0" prefHeight="38.0" prefWidth="234.0" promptText="---" />
-      <Button fx:id="botonBuscar" layoutX="832.0" layoutY="63.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="81.0" styleClass="button-azul" text="Buscar" />
-      <Button fx:id="botonLimpiar" layoutX="832.0" layoutY="123.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="82.0" styleClass="button-gris" text="Limpar" />
+      <Button fx:id="botonBuscar" layoutX="886.0" layoutY="63.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="81.0" styleClass="button-azul" text="Buscar" />
+      <Button fx:id="botonLimpiar" layoutX="885.0" layoutY="130.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="82.0" styleClass="button-gris" text="Limpar" />
       <TableView fx:id="tabla" layoutX="43.2" layoutY="235.0" prefHeight="215.0" prefWidth="926.0" AnchorPane.leftAnchor="43.0" AnchorPane.rightAnchor="43.0" />
       <ComboBox fx:id="comboFormato" layoutX="818.0" layoutY="473.0" prefWidth="150.0" promptText="---" />
       <Button fx:id="botonExportar" layoutX="871.0" layoutY="527.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="93.0" styleClass="button-azul" text="Exportar" />
@@ -42,16 +40,21 @@
       <Label layoutX="41.0" layoutY="482.0" text="Número total de docentes que tomaron curso de capacitación:" AnchorPane.leftAnchor="43.0" />
       <Label layoutX="43.0" layoutY="511.0" text="(%) de docentes que tomaron cursos de capacitación:" AnchorPane.leftAnchor="43.0" />
       <Label layoutX="43.0" layoutY="536.0" text="Número de participantes nivel posgrado (AP):" AnchorPane.leftAnchor="43.0" />
-      <Label fx:id="botonActualizar" layoutX="486.0" layoutY="200.0" styleClass="label-vinculo" text="¿SE ACTUALIZARON DOCUMENTOS?" />
-      <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="445.0" layoutY="196.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="445.0">
-         <image>
-            <Image url="@../utilerias/busqueda/logoInterrogacion.png" />
-         </image>
-      </ImageView>
+      <Label fx:id="botonActualizar" layoutX="479.0" layoutY="124.0" styleClass="label-vinculo" text="Deseas actualizar un archivo" />
       <Label fx:id="docentesTomandoCursos" layoutX="434.0" layoutY="482.0" text="000" />
       <Label fx:id="numeroTotalDocentes" layoutX="216.0" layoutY="455.0" text="000" />
       <Label fx:id="porcentajeDocentesCapacitados" layoutX="381.0" layoutY="511.0" text="000" />
       <Label fx:id="NumeroDocentesNivel" layoutX="338.0" layoutY="536.0" text="000" />
-      <Label fx:id="botonActualizarDatos" layoutX="761.0" layoutY="200.0" styleClass="label-vinculo" text="¿SE ACTUALIZARON DATOS?" />
+      <Label fx:id="botonActualizarDatos" layoutX="479.0" layoutY="153.0" styleClass="label-vinculo" text="Deseas actualizar información del personal docente" />
+      <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="445.0" layoutY="120.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../utilerias/visualizacionDatos/edit.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="445.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../utilerias/visualizacionDatos/edit.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
