--- a/src/vistas/Principal.fxml
+++ b/src/vistas/Principal.fxml
@@ -96,7 +96,7 @@
         </Pane>
         <Pane fx:id="botonRespaldo" layoutX="858.0" layoutY="290.0" prefHeight="140.0" prefWidth="140.0" styleClass="card">
             <children>
-                <ImageView fitHeight="68.0" fitWidth="76.0" layoutX="30.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="68.0" fitWidth="76.0" layoutX="36.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@../utilerias/principal/logoRespaldo.png" />
                     </image>
@@ -124,7 +124,7 @@
             <Image url="@../utilerias/principal/notiCirculo.png" />
          </image>
       </ImageView>
-        <Pane fx:id="notificationPane" layoutX="691.0" layoutY="57.0" maxWidth="307.0" prefHeight="375.0" prefWidth="307.0" styleClass="notificationPane">
+        <Pane fx:id="notificationPane" layoutX="698.0" layoutY="57.0" maxWidth="307.0" prefHeight="375.0" prefWidth="307.0" styleClass="notificationPane">
             <children>
             <ImageView fx:id="reloadNotis" fitHeight="23.0" fitWidth="21.0" layoutX="10.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -134,7 +134,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
-                <Label fx:id="cerrarNotificacion" layoutX="272.0" layoutY="5.0" prefHeight="21.0" prefWidth="14.0" styleClass="cerrarNotificacion" text="X">
+                <Label fx:id="cerrarNotificacion" layoutX="272.0" prefHeight="21.0" prefWidth="14.0" styleClass="cerrarNotificacion" text="X">
                     <font>
                         <Font name="System Bold" size="12.0" />
                     </font>
